--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jQuery-QueryBuilder",
-  "version": "2.5.0",
+  "version": "2.5.0-moodle",
   "author": {
     "name": "Damien \"Mistic\" Sorel",
     "email": "contact@git.strangeplanet.fr",
@@ -9,14 +9,15 @@
   "description": "jQuery plugin for user friendly query/filter creator",
   "main": "dist/js/query-builder.js",
   "dependencies": {
-    "bootstrap": "^3.4.1",
     "dot": "^1.1.3",
-    "jquery": "^3.5.1",
     "jquery-extendext": "^1.0.0",
-    "moment": "^2.29.1",
-    "sql-parser-mistic": "^1.2.3"
+    "moment": "^2.29.1"
   },
   "devDependencies": {
+    "popper.js": "^1.16.1",
+    "sql-parser-mistic": "^1.2.3",
+    "jquery": "^3.4.1",
+    "bootstrap": "^4.3.1",
     "awesome-bootstrap-checkbox": "^0.3.7",
     "blanket": "^1.2.3",
     "bootbox": "^4.4.0",
